<resources>
    <string name="app_name">Amedentix</string>
    <string name="unirme_txt">Unirme</string>
    <string name="acceder_txt">Acceder</string>
    <string name="email_txt">Email</string>
    <string name="password_txt">Password</string>
    <string name="password_confirm_txt">Repita el password</string>
    <string name="name_txt">Nombre y Apellidos</string>
    <string name="name_null_txt">El nombre es obligatorio</string>
    <string name="email_null_txt">El email es obligatorio</string>
    <string name="passw_null_txt">El password es obligatorio</string>
    <string name="passw_conf_null_txt">La confirmación del password es obligatoria</string>
    <string name="passw_error_txt">Los passwords no coinciden</string>
    <string name="email_error_txt">Inserte un email válido</string>
    <string name="title_activity_history">Historia</string>
    <string name="doctor">Doctor</string>
    <string name="patient">Paciente</string>
    <string name="doctor_ask">Es usted un doctor?</string>
    <string name="patient_ask">O es un paciente?</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_home">Historias</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">Haciendo más amena la experiencia en el dentista.</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="history">Historia</string>
    <string name="logout">Salir</string>
    <string name="like">Me Gusta</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_form_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="profile">Perfil</string>
    <string name="error_login">Lo sentimos, ha ocurrido un error.</string>
    <string name="title_activity_histories">HistoriesActivity</string>
    <string name="post_desc_hint">Descripción</string>
    <string name="post_title_hint">Título</string>
    <string name="new_post_btn_hint">Publicar</string>
    <string name="username">Username</string>
    <string name="blog_post_date">Blog Post Date</string>
    <string name="setup_btn_name_text">Actualizar perfil</string>
    <string name="title_activity_maps">Map</string>
    <string name="menu_maps">Mapa</string>
    <string name="clear_map">Limpiar mapa</string>
    <string name="reset_map">Reiniciar mapa</string>
    <string name="default_info_window">Informacion por defecto</string>
    <string name="custom_info_contents">Informacion personalizada</string>
    <string name="custom_info_window">Ventana de informacion personalizada</string>
    <string name="drag_melbourne">Melbourne</string>
    <string name="flat">Bandera</string>
    <string name="rotation">Rotacion</string>
    <string name="map_not_ready">Mapa no listo</string>
    <string name="access_token">sk.eyJ1IjoiYWN1ZXZhczE2MDUiLCJhIjoiY2s2MDQ5cGtmMDN5MjNsbnhmYm1yYjNlciJ9.mJ_dOUq_2vER1mYjkTANoA</string>


    <string name="rv_card_name">Location #%1$d</string>
    <string name="rv_card_bed_info">This location has %1$d beds</string>
    <string name="create_clinic">Crear clínica</string>
    <string name="name_clinic">Nombre</string>
    <string name="publicar_clinica">Crear clínica</string>
    <string name="move_map_instruction">Mueva el mapa</string>
    <string name="location_picker_select_location_button_cancel">Eliminar selección</string>
    <string name="location_picker_select_location_button_select">Seleccionar ubicación</string>
    <string name="user_location_permission_explanation">Usted esta aqui</string>
    <string name="user_location_permission_not_granted">Sin permisos para GPS</string>
    <string name="location_picker_place_name_result">Place name: %1$s</string>
    <string name="location_picker_dropped_marker_snippet_no_results">Sin resultados</string>
    <string name="save_localization">Guardar coordenadas</string>
    <string name="blog_post_title">titulo</string>
    <string name="clinic_name">Nombre de la clínica</string>
    <string name="postal_address">Dirección postal</string>
    <string name="clinic_website">Acceso web</string>
    <string name="clinica_creada">La clínica fue creada correctamente.</string>
</resources>