<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/maps"
            android:icon="@drawable/ic_place_black_24dp"
            android:title="@string/menu_maps" />
        <item
            android:id="@+id/profile"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/profile" />
        <item
            android:id="@+id/logout_drawer_access"
            android:icon="@drawable/ic_logout"
            android:title="@string/logout" />
    </group>

</menu>
